2002-12-12  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-fetch-selected-article): Added call to
	gnus-summary-update-download-mark to update the article in the
	summary.

2002-12-11  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus.el (gnus-summary-high-uncached-face,
	gnus-summary-normal-uncached-face, gnus-summary-low-uncached-face)
	New faces.

	* gnus-agent.el (gnus-agent-downloaded-article-face): REMOVED.  I
	added this on 2002-11-23 but it just wasn't working out as
	intended.  The idea isn't entirely dead, three new faces
	gnus-summary-*-uncached-face are being added to gnus.el to provide
	the basis for an improved implementation.
	(gnus-agent-read-servers): Undo the change made on 2002-11-23. The
	proper file to open is lib/servers.
	(gnus-summary-set-agent-mark): Expanded documentation.  Unmarking
	(i.e. removing the article from gnus-newsgroup-downloadable) will
	now restore the article's default mark rather than simply setting
	no mark.
	(gnus-agent-get-undownloaded-list): Corrected documentation.
	Added code to set new summary local variable,
	gnus-newsgroup-agentized.  Reworked impl so that it doesn't create
	a temporary list.  No longer sets gnus-newsgroup-downloadable.
	(gnus-agent-summary-fetch-group): Keep gnus-newsgroup-undownloaded
	up to date.  Call new gnus-summary-update-download-mark to keep
	summary buffer up-to-date.
	(gnus-agent-fetch-selected-article): Keep
	gnus-newsgroup-undownloaded up to date.
	(gnus-agent-fetch-articles): Return list of articles that were
	successfully fetched.
	(gnus-agent-check-overview-buffer): No more thingatpt.
	(gnus-agent-expire): No longer deletes NOV entries of unread
	articles.
	(gnus-agent-unread-articles): New function.
	(gnus-agent-regenerate-group): The article number must be
	terminated by a tab character.  Added more messages to report
	repairs.  Inhibit quits while writing changes so it is now safe
	have to quit regeneration.  Renamed gnus-tmp-downloaded back to